# handler/createOpening.go
@@ -7,6 +7,18 @@ import (
 	"github.com/gumeeee/go-jobs-api/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Sumary Create Opening
+// @Description Create a new job opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param request body CreateOpeningRequest true "Opening details"
+// @Success 200 {object} CreateOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /openings [post]
 func CreateOpeningHandler(ctx *gin.Context) {
 	request := CreateOpeningRequest{}
 
